--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "langton-ant",
   "version": "1.0.0",
   "description": "A Javascript implementation of langton's ant",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
@@ -17,5 +18,9 @@
   "bugs": {
     "url": "https://github.com/MatMercer/pixijs-langton-ant/issues"
   },
-  "homepage": "https://github.com/MatMercer/pixijs-langton-ant#readme"
+  "homepage": "https://github.com/MatMercer/pixijs-langton-ant#readme",
+  "devDependencies": {
+    "mocha": "^5.2.0",
+    "nyc": "^13.2.0"
+  }
 }
